# lice

./: .gitignore  .gitmodules  Cargo.toml  README.md  justfile  run-all.sh  taplo.toml
combs/: .gitignore  Arith.comb  Array.comb  BindPat.comb  Case.comb  Catch.comb  Class.comb  Default.comb  Deriving.comb  Dict.comb  Enum.comb  Eq.comb  Example.comb  Exists.comb  FArith.comb  Fac.comb  Floating.comb  Foreign.comb  FunDep.comb  GetTime.comb  Guard.comb  Hello.comb  HigherKind.comb  IOArray.comb  IOTest.comb  Infer.comb  Infix.comb  Info.comb  Integer.comb  ListCompr.comb  ListTest.comb  LitMatch.comb  LocalPoly.comb  Misc.comb  Multi.comb  MutRec.comb  NewCAString.comb  Newtype.comb  Nfib.comb  NfibSmol.comb  (+18 more)
examples/: Array.hs  GetTime.hs  NfibSmol.hs  PrimCatch.hs  StrictData.hs
hs/: NewCAString.hs
lice/: Cargo.toml  bfile.c  build.rs
lice-egraph/: Cargo.toml
lice-egraph/src/: lib.rs  main.rs
lice-macros/: Cargo.toml
lice-macros/src/: lib.rs  reduce.rs
lice-run/: Cargo.toml
lice-run/src/: main.rs
lice-scope/: Cargo.toml  TODO
lice-scope/src/: app.rs  gui.rs  main.rs
lice/src/: array.rs  comb.rs  combinator.rs  eval.rs  ffi.rs  file.rs  float.rs  graph.rs  integer.rs  lib.rs  main.rs  memory.rs  parse.rs  string.rs  tag.rs  tick.rs
scripts/: generate-combs.sh  gitconfig  mhs  run-tests.sh
