[package]
name              = "lice-run"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lice       = { path = "../lice", features = ["file", "rt"] }
clap       = { version = "4.4", features = ["derive"] }
log        = { version = "0.4" }
env_logger = { version = "0.11" }
