[package]
name = "lice-scope"
description = "Graphical lice inspection tool"
authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
lice = { path = "../lice", features = [ "graph" ] }
egui_graphs = { version = "0.18", features = [ "egui_persistence", "serde" ] }
egui = { version = "0.25", features = [ "persistence" ] }
eframe = { version = "0.25" }
petgraph = { version = "0.6" }
clap = { version = "4.4", features = ["derive"] }
log = { version = "0.4" }
env_logger = { version = "0.11" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"
getrandom = { version = "0.2", features = ["js"] }
