[package]
name              = "lice"
description       = "Little Intermediate Combinator Expressions"
authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name              = "lice"
required-features = ["cli"]

[features]
default = ["cli"]
cli = [
  "file",
  "rt",
  "graph",
  "dep:clap",
  "dep:env_logger",
]
graph = ["file", "dep:petgraph"]
file = ["std", "dep:nom"]
std = ["parse-display/std", "gc-arena/std"]
rt = [
  "dep:gc-arena",
  "dep:thin_str",
  "dep:zerocopy",
  "dep:zerocopy-derive",
  "dep:heapless",
  "dep:bitvec",
  "dep:derive_more",
  "dep:read_char",
  "dep:once_cell",
  "dep:libc",
  "dep:ryu",
  "dep:thiserror",
  "dep:either",
  "dep:strum",
]

[dependencies]
lice-macros = { path = "../lice-macros" }

num_enum      = { version = "0.7" }
parse-display = { version = "0.9", default-features = false }
log           = { version = "0.4" }
anyhow        = { version = "1.0", default-features = false }

clap       = { optional = true, version = "4.4", features = ["derive"] }
env_logger = { optional = true, version = "0.11" }

nom = { optional = true, version = "7.1", default-features = false, features = [
  "alloc",
] }

petgraph = { optional = true, version = "0.6" }

derive_more = { optional = true, version = "1.0.0-beta.6", features = [
  "from",
  "unwrap",
  "try_unwrap",
] }

gc-arena        = { optional = true, version = "0.5", default-features = false }
thin_str        = { optional = true, version = "0.1" }
zerocopy        = { optional = true, version = "0.7" }
zerocopy-derive = { optional = true, version = "0.7" }
heapless        = { optional = true, version = "0.8" }
bitvec          = { optional = true, version = "1" }
read_char       = { optional = true, version = "0.1" }
once_cell       = { optional = true, version = "1.19" }
libc            = { optional = true, version = "0.2.153" }
ryu             = { optional = true, version = "1.0" }
thiserror       = { optional = true, version = "1.0" }
either          = { optional = true, version = "1.10" }
strum           = { optional = true, version = "0.26", features = ["derive"] }

[build-dependencies]
bindgen = { version = "0.69" }
cc      = { version = "1.0" }
